--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ sudo: false
 language: java
 install: true
 jdk: oraclejdk11
+before_script: cd project
 script:
   - mvn install
 after_success:
   - mvn clean test jacoco:report coveralls:report
-env:
-  matrix:
-    - ROOT_POM="wava/pom.xml"
