--- a/wava/pom.xml
+++ b/wava/pom.xml
@@ -69,21 +69,23 @@
           <version>3.0.0</version>
         </plugin>
         <plugin>
+          <groupId>org.eluder.coveralls</groupId>
+          <artifactId>coveralls-maven-plugin</artifactId>
+          <version>4.3.0</version>
+          <configuration>
+            <repoToken>SLdahK1s5fystSHH0G3E6ehqO2yVH1UmD</repoToken>
+          </configuration>
+        </plugin>
+        <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
           <version>0.8.2</version>
           <executions>
             <execution>
-              <goals>
-                <goal>prepare-agent</goal>
-              </goals>
-            </execution>
-            <execution>
-              <id>report</id>
-              <phase>test</phase>
-              <goals>
-                <goal>report</goal>
-              </goals>
+                <id>prepare-agent</id>
+                <goals>
+                    <goal>prepare-agent</goal>
+                </goals>
             </execution>
           </executions>
         </plugin>
