--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ jdk: oraclejdk11
 before_script: cd wava
 script:
   - mvn install
+  - mvn cobertura:cobertura
 after_success:
   - mvn clean test jacoco:report coveralls:report
