--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_script: cd wava
 script:
   - mvn install
 after_success:
-  - mvn clean test jacoco:report coveralls:report
+  - mvn clean test
